--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <section id="about">
             <h2>Tentang Saya</h2>
             <div class="about-grid">
-                <img src="/image/Poto-saya.jpg" alt="Aldo Sebastian" class="profile-img">
+                <img src="./image/Poto-saya.jpg" alt="Aldo Sebastian" class="profile-img">
                 <div>
                     <p>Saya Aldo Sebastian, seorang web developer yang berfokus pada pengembangan aplikasi web menggunakan teknologi HTML, CSS, dan JavaScript. Saya memiliki passion dalam menciptakan aplikasi yang fungsional dan user-friendly.</p>
                     <p>Dengan pengalaman dalam mengembangkan berbagai aplikasi web, termasuk calculator dan tools interaktif lainnya, saya terus belajar dan mengembangkan keahlian untuk memberikan solusi terbaik.</p>
@@ -47,21 +47,21 @@
             <h2>Proyek Saya</h2>
             <div class="projects-grid">
                 <article class="project">
-                    <img src="/image/calculator.jpeg" alt="Calculator App">
+                    <img src="./image/calculator.jpeg" alt="Calculator App">
                     <h3>Calculator App</h3>
                     <p>Gambar menampilkan tampilan aplikasi kalkulator sederhana yang dibuat dengan HTML, CSS, dan JavaScript. Aplikasi ini dapat melakukan operasi matematika dasar dengan desain antarmuka yang bersih dan responsif.</p>
                     <a href="https://aldosebastian1.github.io/calculator/" class="project-link" target="_blank">Lihat Live Demo →</a>
                 </article>
                 
                 <article class="project">
-                    <img src="/image/nutristion-fact.jpeg" alt="Nutrition Fact Web">
+                    <img src="./image/nutristion-fact.jpeg" alt="Nutrition Fact Web">
                     <h3>Nutrition Fact Web</h3>
                     <p>Gambar memperlihatkan halaman web informasi nutrisi makanan. Proyek ini menampilkan data nutrisi dengan tampilan tabel yang rapi dan mudah dibaca, serta navigasi yang user-friendly.</p>
                     <a href="https://aldosebastian1.github.io/factur-nutrisi/" class="project-link">Lihat Live Demo →</a>
                 </article>
                 
                 <article class="project">
-                    <img src="/image/favorite-movie.jpeg" alt="Favorite Movie Website">
+                    <img src="./image/favorite-movie.jpeg" alt="Favorite Movie Website">
                     <h3>Favorite Movie Website</h3>
                     <p>Gambar menampilkan website daftar film favorit. Website ini menampilkan poster film, judul, dan deskripsi singkat, serta fitur pencarian film favorit pengguna.</p>
                     <a href="https://aldosebastian1.github.io/favorite-movie-website/" class="project-link">Lihat Live Demo →</a>
@@ -72,9 +72,9 @@
         <section id="gallery">
             <h2>Dokumentasi Development</h2>
             <div class="gallery-grid">
-                <img src="/image/calculator.jpeg" alt="HTML Development" class="gallery-img">
-                <img src="/image/nutristion-fact.jpeg" alt="CSS Styling" class="gallery-img">
-                <img src="/image/favorite-movie.jpeg" alt="JavaScript Logic" class="gallery-img">
+                <img src="./image/calculator.jpeg" alt="HTML Development" class="gallery-img">
+                <img src="./image/nutristion-fact.jpeg" alt="CSS Styling" class="gallery-img">
+                <img src="./image/favorite-movie.jpeg" alt="JavaScript Logic" class="gallery-img">
             </div>
         </section>
     </main>
@@ -87,6 +87,6 @@
         </div>
         <p>&copy; 2025 Aldo Sebastian Portfolio</p>
     </footer>
-    <script src="/js/script.js"></script>
+    <script src="./js/script.js"></script>
 </body>
 </html>
